[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/BaseNode.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 18.0

[node name="BaseNode" type="Node2D"]
script = ExtResource( 2 )

[node name="Visual" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visual"]
shape = SubResource( 1 )

[node name="Information" type="Control" parent="."]
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="LabelName" type="Label" parent="Information"]
anchor_right = 1.0
anchor_bottom = 0.25
text = "Node name"
align = 1
autowrap = true

[connection signal="mouse_entered" from="Visual" to="." method="_on_Visual_mouse_entered"]
[connection signal="mouse_exited" from="Visual" to="." method="_on_Visual_mouse_exited"]
